2008-06-27  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.[ch]:
	* src/libtracker-common/tracker-config.c:
	* src/libtracker-common/tracker-module-config.c: Added
	tracker_path_evaluate_name() to convert $HOME and "~/foo" into
	real paths. This is now used by the module config and the main
	config module when loading directory strings or string lists.

2008-06-27  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/Makefile.am: Fixed a LIBS in an INCLUDES

	* tests/libtracker-db/tracker-db-manager-test-attach.c: Fixed the
	tests, the reinit tests made a few incorrect assumptions. Hence why
	they failed. I just removed them for now.

2008-06-26  Carlos Garnacho  <carlos@imendio.com>

	* data/modules/Makefile.am:
	* data/modules/*.xml: rename to *.module.
	* data/modules/evolution.module: Added.

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* data/modules/applications.xml:
	* data/modules/files.xml:
	* data/modules/gaim-conversations.xml: Use "true" not "True",
	breaks the GKeyFile.
	
	* src/libtracker-common/tracker-module-config.c: Don't set the
	modules to NULL and set GError to NULL before using it.

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-module-config.c: Make sure we set
	the separator as the right thing when building the path here.

2008-06-26  Martyn Russell  <martyn@imendio.com>

	* configure.ac:
	* data/Makefile.am:
	* data/modules/Makefile.am:
	* data/modules/applications.xml:
	* data/modules/files.xml:
	* data/modules/gaim-conversations.xml: Added these module files
	which should get read on startup.
	
	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-module-config.[ch]: Added this
	module to load the .xml files which get installed into
	$prefix/share/tracker.
	
	* src/libtracker-common/tracker-type-utils.[ch]: Added
	tracker_gslist_to_string_list().
	
	* src/trackerd/tracker-crawler.[ch]: 
	* src/trackerd/tracker-main.c: 